moved titles second, fixed some spacing, changed images to small

--- a/info.css
+++ b/info.css
@@ -15,6 +15,7 @@
     width: 100%;
     /*position: absolute;*/
     animation-duration: 0.5s;
+    will-change: transform, display;
     
 
 }
@@ -195,14 +196,13 @@
     flex-direction: column;
     width: 20%;
     margin-right: 0.5rem;
-    
-    
-
 }
+
 a {
   text-decoration: inherit;
   color: inherit;
 }
+
 .titles .title{
     font-size: 0.75rem;
     font-weight: 200;
@@ -271,7 +271,7 @@ a {
     font-weight: 200;
     position: absolute;
     z-index: 10000;
-    transition: all ease-out 0.3s;
+    transition: transform ease-out 0.3s;
     color: #f9d9c000;
     padding: 10%;
     width: calc(100% - 8px);
@@ -295,9 +295,9 @@ a {
 
 
 .img img{
-    max-width: 100%;
-    max-height: 100%;
-    object-fit:fill;
+    width: 100%;
+    height: 100%;
+    object-fit:cover; /*change this to fill maybe idk*/
     /*border: 4px solid var(--font-color-front);*/
     background-color: var(--font-color-front);
     -ms-user-select: none; 
