--- a/mobile.css
+++ b/mobile.css
@@ -18,12 +18,18 @@
     .moving-parts{
         flex-direction: column;
     }
+    .titles {
+        order: 2;
+        margin-left: 5vw;
+    }
     .titles .title{
         font-size: 2rem;
         transform: none;
         width: 100%;
         text-justify: left;
-        margin-left: 5%;
+    }
+    .titles .x-button {
+        margin-top: 20px;
     }
     .carousel {
         display: flex;
@@ -40,5 +46,9 @@
         font-size: 2rem;
         line-height: normal;
         overflow-y: scroll;
+    }
+    .img-container .img {
+        width: 100%;
+        height: 100%;
     }
 }
